--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
   <h2>and so is my love for you.</h2>
 </section>
 
-    <script type="module" src="/main.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
